2020-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue in handling of surviving registers in unsigned upcast.

2020-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic14/aclocal.m4:
	  Update to automake 1.16.2 to fix bug #3140.
	* device/lib/pic14/libc/Makefile.am:
	  Port itoa, ltoa rename to pic14 to fix bug #3110.
	* src/clean.mk:
	  Include pdk ports in make clean to fix bug #3152.
	* support/regression/ports/stm8/spec.mk,
	  support/regression/ports/stm8-large/spec.mk:
	  Increase stm8 test timeout by 50%, to accomodate slow macOS PPC (bug #3149).

2020-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCval.c,
	  .version,
	  support/regression/test/digit_separators.c:
	  C23 digit separators.

2020-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCval.c,
	  .version:
	  C23 disallows concatenation of differently-prefixed string literals (N2594).

2020-12-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve &, |, ^ by integer constant expression, merge ^ and ~.

2020-11-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  device/include/Makefile.in,
	  device/include/rab,
	  .version:
	  Migrate Rabbit headers from OpenRabbit to SDCC.

2020-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Change Rabbit default data location to 0xa000.

2020-11-27 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update links to upstream ASxxxx, patch by Warner Losh.

2020-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Unify ~,^.

2020-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve handling of rematerialized stack locations in +,-.
	* src/stm8/peeph.def:
	  Improve negation of carry result.

2020-11-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c: